--- a/Apps/package.json
+++ b/Apps/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "workspaces": [
-    "UnitTests"
+    "UnitTests/JavaScript"
   ],
   "scripts": {
     "getNightly": "node scripts/getNightly.js"
