--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -15,6 +15,9 @@ parameters:
 - name: graphics_api
   type: string
   default: D3D11
+- name: enableSanitizers
+  type: boolean
+  default: false
   
 jobs:
   - job: ${{ parameters.name }}
@@ -22,6 +25,7 @@ jobs:
     pool:
       vmImage: ${{ parameters.vmImage }}
     variables:
+      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF') }}
       ${{ if eq(parameters.napiType, 'jsi') }}:
         napiSuffix: '_JSI'
         jsEngineDefine: '-DNAPI_JAVASCRIPT_ENGINE=JSI'
@@ -40,7 +44,7 @@ jobs:
 
       # BGFX_CONFIG_MAX_FRAME_BUFFERS is set so enough Framebuffers are available before V8 starts disposing unused ones
       - script: |
-          cmake -G "Visual Studio 17 2022" -B build${{ variables.solutionName }} -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -D BX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{ parameters.graphics_api }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON
+          cmake -G "Visual Studio 17 2022" -B build${{ variables.solutionName }} -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -D BX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{ parameters.graphics_api }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG)
         displayName: 'Generate ${{ variables.solutionName }} solution'
     
       - task: MSBuild@1
