Fix build for install test

--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -44,11 +44,12 @@ endif()
 
 set(APPS_DIR "../../Apps")
 set(UNITTESTS_DIR "${APPS_DIR}/UnitTests")
-set(LOCAL_SCRIPTS "${UNITTESTS_DIR}/dist/tests.js")
 
 set(SOURCES
-    "${UNITTESTS_DIR}/Shared/Shared.h"
-    "${UNITTESTS_DIR}/Shared/Shared.cpp")
+    "${UNITTESTS_DIR}/Shared/Tests.h"
+    "${UNITTESTS_DIR}/Shared/Tests.cpp"
+    "${UNITTESTS_DIR}/Shared/Tests.JavaScript.cpp"
+    "${UNITTESTS_DIR}/Shared/Tests.NativeEngine.cpp")
 
 if(WIN32 AND NOT WINDOWS_STORE)
     set(SOURCES ${SOURCES} "${UNITTESTS_DIR}/Win32/App.cpp")
@@ -121,7 +122,7 @@ elseif(NAPI_JAVASCRIPT_ENGINE STREQUAL "V8")
     endif()
 endif()
 
-add_executable(TestInstall ${LOCAL_SCRIPTS} ${SOURCES})
+add_executable(TestInstall ${SOURCES})
 
 set(INSTALL_LIBS_DIR "${BINARY_DIR}/install/lib")
 target_include_directories(TestInstall PRIVATE "${BINARY_DIR}/install/include")
