--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,6 +72,7 @@ jobs:
       name: Win32_x64_D3D12_Sanitizers
       vmImage: 'windows-latest'
       platform: x64
+      graphics_api: D3D12
       enableSanitizers: true
 
   - template: .github/jobs/win32.yml
