ASAN suppress list for Linux

--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -36,6 +36,13 @@ jobs:
         cd build/Apps/Playground
         xvfb-run ./Playground app:///Scripts/validation_native.js
       displayName: 'Validation Tests'
+      condition: eq(variables.SANITIZER_FLAG, 'OFF')
+
+    - script: |
+        cd build/Apps/Playground
+        ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../.github/asan_suppress.txt xvfb-run ./Playground app:///Scripts/validation_native.js
+      displayName: 'Validation Tests with ASAN'
+      condition: eq(variables.SANITIZER_FLAG, 'ON')
 
     - task: PublishBuildArtifacts@1
       inputs:
@@ -54,3 +61,10 @@ jobs:
         cd build/Apps/UnitTests
         xvfb-run ./UnitTests
       displayName: 'Unit Tests'
+      condition: eq(variables.SANITIZER_FLAG, 'OFF')
+
+    - script: |
+        cd build/Apps/UnitTests
+        ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../.github/asan_suppress.txt xvfb-run ./UnitTests
+      displayName: 'Unit Tests with ASAN'
+      condition: eq(variables.SANITIZER_FLAG, 'ON')
