--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -10,7 +10,7 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
 
     variables:
-      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF') }}
+      SANITIZER_FLAG: ${{ if eq(parameters.enableSanitizers, true) }}ON${{ else }}OFF
 
     steps:
     - template: cmake.yml
