--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -36,13 +36,13 @@ jobs:
         cd build/Apps/Playground
         xvfb-run ./Playground app:///Scripts/validation_native.js
       displayName: 'Validation Tests'
-      condition: not(eq(variables.SANITIZER_FLAG, 'ON'))
+      condition: ${{ parameters.enableSanitizers }}
 
     - script: |
         cd build/Apps/Playground
         ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../.github/asan_suppress.txt xvfb-run ./Playground app:///Scripts/validation_native.js
       displayName: 'Validation Tests with ASAN'
-      condition: eq(variables.SANITIZER_FLAG, 'ON')
+      condition: ${{ parameters.enableSanitizers }}
 
     - task: PublishBuildArtifacts@1
       inputs:
@@ -61,10 +61,10 @@ jobs:
         cd build/Apps/UnitTests
         xvfb-run ./UnitTests
       displayName: 'Unit Tests'
-      condition: not(eq(variables.SANITIZER_FLAG, 'ON'))
+      condition: ${{ parameters.enableSanitizers }}
 
     - script: |
         cd build/Apps/UnitTests
         ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../.github/asan_suppress.txt xvfb-run ./UnitTests
       displayName: 'Unit Tests with ASAN'
-      condition: eq(variables.SANITIZER_FLAG, 'ON')
+      condition: ${{ parameters.enableSanitizers }}
