--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -36,7 +36,7 @@ jobs:
         cd build/Apps/Playground
         xvfb-run ./Playground app:///Scripts/validation_native.js
       displayName: 'Validation Tests'
-      condition: ${{ not(parameters.enableSanitizers) }}
+      condition: ${{ parameters.enableSanitizers == false }}
 
     - script: |
         cd build/Apps/Playground
@@ -61,7 +61,7 @@ jobs:
         cd build/Apps/UnitTests
         xvfb-run ./UnitTests
       displayName: 'Unit Tests'
-      condition: ${{ not(parameters.enableSanitizers) }}
+      condition: ${{ parameters.enableSanitizers == false}}
 
     - script: |
         cd build/Apps/UnitTests
