--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -32,6 +32,9 @@ jobs:
         ninja -C build
       displayName: 'Build X11'
     
+# Memory leaks on CI is disabled due to memory leaks reported with xvfb and impossible to add to ignore list.
+# See https://github.com/BabylonJS/BabylonNative/issues/1575
+
     - script: |
         cd build/Apps/UnitTests
         xvfb-run ./UnitTests
@@ -39,6 +42,8 @@ jobs:
 
     - script: |
         cd build/Apps/Playground
+        # Command line to suppress false positive memory leaks :
+        # ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../.github/asan_suppress.txt xvfb-run ./Playground app:///Scripts/validation_native.js
         xvfb-run ./Playground app:///Scripts/validation_native.js
       displayName: 'Validation Tests'
 
