--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -18,7 +18,7 @@ jobs:
       displayName: 'Select XCode $(XCODE_VERSION)'
 
     - script: |
-        cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON
+        cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON -D BABYLON_NATIVE_TESTS_USE_NOOP_METAL_DEVICE=ON
       displayName: 'Generate macOS solution'
 
     - script: |
