--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ jobs:
 
   - template: .github/jobs/linux.yml
     parameters:
-      name: Ubuntu_Clang_JavaScriptCore
+      name: Ubuntu_Clang_JSC
       vmImage: 'ubuntu-latest'
       CC: clang
       CXX: clang++
@@ -96,7 +96,7 @@ jobs:
 
   - template: .github/jobs/linux.yml
     parameters:
-      name: Ubuntu_GCC_JavaScriptCore
+      name: Ubuntu_GCC_JSC
       vmImage: 'ubuntu-latest'
       CC: gcc
       CXX: g++
