separate in 1 plugin and 1 polyfill

--- a/Apps/Playground/Android/BabylonNative/CMakeLists.txt
+++ b/Apps/Playground/Android/BabylonNative/CMakeLists.txt
@@ -32,7 +32,8 @@ target_link_libraries(BabylonNativeJNI
     NativeCamera
     NativeEncoding
     NativeEngine
-    DataStream
+    Zip
+    DecompressionStream
     NativeInput
     NativeOptimizations
     NativeXr
