--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -237,18 +237,20 @@ endif()
 # --------------------------------------------------
 # miniz
 # --------------------------------------------------
-if(BABYLON_NATIVE_PLUGIN_DATASTREAM)
+if(BABYLON_NATIVE_PLUGIN_ZIP)
     FetchContent_MakeAvailable_With_Message(miniz)
-    set_property(TARGET miniz PROPERTY UNITY_BUILD false)
     target_compile_definitions(miniz PRIVATE MINIZ_DISABLE_ZIP_READER_CRC32_CHECKS)
+    set_property(TARGET miniz PROPERTY UNITY_BUILD false)
+    set_property(TARGET miniz PROPERTY FOLDER Dependencies)
 endif()
 
 # --------------------------------------------------
 # libdeflate
 # --------------------------------------------------
-if(BABYLON_NATIVE_PLUGIN_DATASTREAM)
+if(BABYLON_NATIVE_POLYFILL_DECOMPRESSIONSTREAM)
     set(LIBDEFLATE_BUILD_SHARED_LIB OFF)
     set(LIBDEFLATE_COMPRESSION_SUPPORT OFF)
     FetchContent_MakeAvailable_With_Message(libdeflate)
     set_property(TARGET libdeflate_static PROPERTY UNITY_BUILD false)
+    set_property(TARGET libdeflate_static PROPERTY FOLDER Dependencies)
 endif()
