--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -166,7 +166,8 @@ target_link_libraries(TestInstall
     NativeCapture
     NativeEncoding
     NativeEngine
-    DataStream
+    Zip
+    DecompressionStream
     NativeInput
     NativeOptimizations
     NativeTracing
@@ -180,7 +181,6 @@ target_link_libraries(TestInstall
     spirv-cross-core
     spirv-cross-hlsl
     UrlLib
-    DataStream
     Window
     XMLHttpRequest
     ${ADDITIONAL_LIBRARIES}
