--- a/Polyfills/CMakeLists.txt
+++ b/Polyfills/CMakeLists.txt
@@ -5,3 +5,7 @@ endif()
 if(BABYLON_NATIVE_POLYFILL_CANVAS)
     add_subdirectory(Canvas)
 endif()
+
+if(BABYLON_NATIVE_POLYFILL_DECOMPRESSIONSTREAM)
+    add_subdirectory(DecompressionStream)
+endif()
