--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -136,7 +136,8 @@ target_link_libraries(Playground
     PRIVATE NativeCapture
     PRIVATE NativeEncoding
     PRIVATE NativeEngine
-    PRIVATE DataStream
+    PRIVATE Zip
+    PRIVATE DecompressionStream
     PRIVATE NativeInput
     PRIVATE NativeOptimizations
     PRIVATE ScriptLoader
