--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -43,18 +43,21 @@ endif()
 # executable stub
 
 set(APPS_DIR "../../Apps")
-set(UNITTESTS_DIR "${APPS_DIR}/UnitTests")
+set(SOURCE_DIR "${APPS_DIR}/UnitTests/Source")
 
 set(SOURCES
-    "${UNITTESTS_DIR}/Shared/Tests.h"
-    "${UNITTESTS_DIR}/Shared/Tests.cpp"
-    "${UNITTESTS_DIR}/Shared/Tests.JavaScript.cpp"
-    "${UNITTESTS_DIR}/Shared/Tests.NativeEngine.cpp")
+    "${SOURCE_DIR}/App.h"
+    "${SOURCE_DIR}/App.cpp"
+    "${SOURCE_DIR}/Tests.JavaScript.cpp"
+    "${SOURCE_DIR}/Tests.NativeEngine.cpp"
+    "${SOURCE_DIR}/Tests.ExternalTexture.cpp"
+    "${SOURCE_DIR}/Utils.h"
+    "${SOURCE_DIR}/Utils_${GRAPHICS_API}.cpp")
 
 if(WIN32 AND NOT WINDOWS_STORE)
-    set(SOURCES ${SOURCES} "${UNITTESTS_DIR}/Win32/App.cpp")
+    set(SOURCES ${SOURCES} "${SOURCE_DIR}/App_Win32.cpp")
 else()
-    message(FATAL_ERROR "Unrecognized platform: ${CMAKE_SYSTEM_NAME}")
+    message(FATAL_ERROR "Unsupported platform: ${CMAKE_SYSTEM_NAME}")
 endif()
 
 set(NUGET_PATH "${BINARY_DIR}/NuGet")
