--- a/.github/jobs/test_install_win32.yml
+++ b/.github/jobs/test_install_win32.yml
@@ -15,10 +15,10 @@ parameters:
 - name: graphics_api
   type: string
   default: D3D11
-  
+
 jobs:
   - job: ${{ parameters.name }}
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     timeoutInMinutes: 20
     pool:
       vmImage: ${{ parameters.vmImage }}
@@ -43,14 +43,14 @@ jobs:
       - script: |
           cmake -G "Visual Studio 17 2022" -B build${{ variables.solutionName }} -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -D BX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{ parameters.graphics_api }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON
         displayName: 'Generate ${{ variables.solutionName }} solution'
-    
+
       - task: MSBuild@1
         inputs:
           solution: 'build${{ variables.solutionName }}/BabylonNative.sln'
           maximumCpuCount: true
           configuration: 'RelWithDebInfo'
         displayName: 'Build ${{ variables.solutionName }}'
-    
+
       - script: |
           cmake --build build${{ variables.solutionName }} --target INSTALL --config RelWithDebInfo
           cd Install/Test
