Enable sanitizers for macOS, Linux, Windows (#1559)
Enable Address sanitizer as pointed by
https://github.com/BabylonJS/BabylonNative/issues/1557

- Add macOS, Windows and Linux sanitizer builds
- up ndk to v28
- misc build fixes
- fix reported memory leaks and bugs

Memleaks + CI issue :
https://github.com/BabylonJS/BabylonNative/issues/1575

--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -1,13 +1,17 @@
 parameters:
   name: ''
   vmImage: ''
+  enableSanitizers: false
 
 jobs:
   - job: ${{ parameters.name }}
     timeoutInMinutes: 30
     pool:
       vmImage: ${{ parameters.vmImage }}
-  
+
+    variables:
+      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF') }}
+
     steps:
     - template: cmake.yml
       parameters:
@@ -18,7 +22,7 @@ jobs:
       displayName: 'Select XCode $(XCODE_VERSION)'
 
     - script: |
-        cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON
+        cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG)
       displayName: 'Generate macOS solution'
 
     - script: |
