--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -4,6 +4,7 @@ parameters:
   CC: ''
   CXX: ''
   JSEngine: ''
+  enableSanitizers: false
 
 jobs:
   - job: ${{ parameters.name }}
@@ -12,6 +13,7 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
 
     variables:
+      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF') }}
       CC: ${{ parameters.CC }}
       CXX: ${{ parameters.CXX }}
   
@@ -22,18 +24,28 @@ jobs:
 
     - script: |
         sudo apt-get update
-        sudo apt-get install libjavascriptcoregtk-4.1-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev
+        sudo apt-get install libjavascriptcoregtk-4.1-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev clang
       displayName: 'Install packages'
 
     - script: |
-        cmake -G Ninja -B build -D JAVASCRIPTCORE_LIBRARY=/usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so -D NAPI_JAVASCRIPT_ENGINE=${{ parameters.JSEngine }} -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BX_CONFIG_DEBUG=ON -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D OpenGL_GL_PREFERENCE=GLVND -D BABYLON_DEBUG_TRACE=ON
+        cmake -G Ninja -B build -D JAVASCRIPTCORE_LIBRARY=/usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so -D NAPI_JAVASCRIPT_ENGINE=${{ parameters.JSEngine }} -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BX_CONFIG_DEBUG=ON -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D OpenGL_GL_PREFERENCE=GLVND -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG) .
         ninja -C build
       displayName: 'Build X11'
     
+# Memory leaks on CI is disabled due to memory leaks reported with xvfb and impossible to add to ignore list.
+# See https://github.com/BabylonJS/BabylonNative/issues/1575
+
     - script: |
         cd build/Apps/Playground
+        # Command line to suppress false positive memory leaks :
+        # ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../.github/asan_suppress.txt xvfb-run ./Playground app:///Scripts/validation_native.js
         xvfb-run ./Playground app:///Scripts/validation_native.js
       displayName: 'Validation Tests'
+
+    - script: |
+        cd build/Apps/UnitTests
+        xvfb-run ./UnitTests
+      displayName: 'Unit Tests'
 
     - task: PublishBuildArtifacts@1
       inputs:
@@ -47,8 +59,3 @@ jobs:
         pathtoPublish: 'build/Apps/Playground/Errors'
       displayName: 'Publish Tests ${{ parameters.name }} Errors'
       condition: failed()
-
-    - script: |
-        cd build/Apps/UnitTests
-        xvfb-run ./UnitTests
-      displayName: 'Unit Tests'
