--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -42,19 +42,19 @@ endif()
 
 # executable stub
 
-set(APPS_DIR "../../Apps")
-set(UNITTESTS_DIR "${APPS_DIR}/UnitTests")
-
-set(SOURCES
-    "${UNITTESTS_DIR}/Shared/Tests.h"
-    "${UNITTESTS_DIR}/Shared/Tests.cpp"
-    "${UNITTESTS_DIR}/Shared/Tests.JavaScript.cpp"
-    "${UNITTESTS_DIR}/Shared/Tests.NativeEngine.cpp")
-
 if(WIN32 AND NOT WINDOWS_STORE)
-    set(SOURCES ${SOURCES} "${UNITTESTS_DIR}/Win32/App.cpp")
+    set(SOURCE_DIR "../../Apps/UnitTests/Source")
+    set(SOURCES
+        "${SOURCE_DIR}/App.h"
+        "${SOURCE_DIR}/App.cpp"
+        "${SOURCE_DIR}/App_Win32.cpp"
+        "${SOURCE_DIR}/Tests.JavaScript.cpp"
+        "${SOURCE_DIR}/Tests.NativeEngine.cpp"
+        "${SOURCE_DIR}/Tests.ExternalTexture.cpp"
+        "${SOURCE_DIR}/Utils.h"
+        "${SOURCE_DIR}/Utils_D3D11.cpp")
 else()
-    message(FATAL_ERROR "Unrecognized platform: ${CMAKE_SYSTEM_NAME}")
+    message(FATAL_ERROR "Unsupported platform: ${CMAKE_SYSTEM_NAME}")
 endif()
 
 set(NUGET_PATH "${BINARY_DIR}/NuGet")
