--- a/.github/jobs/test_install_win32.yml
+++ b/.github/jobs/test_install_win32.yml
@@ -18,7 +18,7 @@ parameters:
 
 jobs:
   - job: ${{ parameters.name }}
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     timeoutInMinutes: 20
     pool:
       vmImage: ${{ parameters.vmImage }}
