--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -1,59 +1,59 @@
 parameters:
-- name: name
-  type: string
-- name: vmImage
-  type: string
-- name: platform
-  type: string
-- name: napiType
-  type: string
-  default: direct
-  values:
-  - direct
-  - jsi
-  - V8
-- name: graphics_api
-  type: string
-  default: D3D11
-- name: enableSanitizers
-  type: boolean
-  default: false
-  
+  - name: name
+    type: string
+  - name: vmImage
+    type: string
+  - name: platform
+    type: string
+  - name: napiType
+    type: string
+    default: direct
+    values:
+      - direct
+      - jsi
+      - V8
+  - name: graphics_api
+    type: string
+    default: D3D11
+  - name: enableSanitizers
+    type: boolean
+    default: false
+
 jobs:
-  - job: ${{ parameters.name }}
+  - job: ${{parameters.name}}
     timeoutInMinutes: 60
     pool:
-      vmImage: ${{ parameters.vmImage }}
+      vmImage: ${{parameters.vmImage}}
     variables:
-      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF') }}
-      ${{ if eq(parameters.napiType, 'jsi') }}:
-        napiSuffix: '_JSI'
-        jsEngineDefine: '-DNAPI_JAVASCRIPT_ENGINE=JSI'
-      ${{ elseif eq(parameters.napiType, 'V8') }}:
-        napiSuffix: '_V8'
-        jsEngineDefine: '-DNAPI_JAVASCRIPT_ENGINE=V8'
-      ${{ else }}:
-        napiSuffix: ''
-        jsEngineDefine: ''
-      solutionName: 'Win32_${{ parameters.platform }}${{variables.napiSuffix}}'
+      SANITIZER_FLAG: ${{coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF')}}
+      ${{if eq(parameters.napiType, 'jsi')}}:
+        napiSuffix: "_JSI"
+        jsEngineDefine: "-DNAPI_JAVASCRIPT_ENGINE=JSI"
+      ${{elseif eq(parameters.napiType, 'V8')}}:
+        napiSuffix: "_V8"
+        jsEngineDefine: "-DNAPI_JAVASCRIPT_ENGINE=V8"
+      ${{else}}:
+        napiSuffix: ""
+        jsEngineDefine: ""
+      solutionName: "Win32_${{parameters.platform}}${{variables.napiSuffix}}"
 
     steps:
       - template: cmake.yml
         parameters:
-          vmImage: ${{ parameters.vmImage }}
+          vmImage: ${{parameters.vmImage}}
 
       # BGFX_CONFIG_MAX_FRAME_BUFFERS is set so enough Framebuffers are available before V8 starts disposing unused ones
       - script: |
-          cmake -G "Visual Studio 17 2022" -B build${{ variables.solutionName }} -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -D BX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{ parameters.graphics_api }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG)
-        displayName: 'Generate ${{ variables.solutionName }} solution'
-    
+          cmake -G "Visual Studio 17 2022" -B build${{variables.solutionName}} -A ${{parameters.platform}} ${{variables.jsEngineDefine}} -D BX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{parameters.graphics_api}} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG)
+        displayName: "Generate ${{variables.solutionName}} solution"
+
       - task: MSBuild@1
         inputs:
-          solution: 'build${{ variables.solutionName }}/BabylonNative.sln'
+          solution: "build${{variables.solutionName}}/BabylonNative.sln"
           maximumCpuCount: true
-          configuration: 'RelWithDebInfo'
-        displayName: 'Build ${{ variables.solutionName }}'
-    
+          configuration: "RelWithDebInfo"
+        displayName: "Build ${{variables.solutionName}}"
+
       - script: |
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\Playground.exe"
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\Playground.exe" /v DumpType /t REG_DWORD /d 2
@@ -63,7 +63,7 @@ jobs:
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\UnitTests.exe" /v DumpType /t REG_DWORD /d 2
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\UnitTests.exe" /v DumpCount /t REG_DWORD /d 1
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\UnitTests.exe" /v DumpFolder /t REG_SZ /d "$(Build.ArtifactStagingDirectory)/Dumps"
-        displayName: 'Enable Crash Dumps'
+        displayName: "Enable Crash Dumps"
 
       - powershell: |
           $vs = vswhere -latest -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
@@ -73,55 +73,55 @@ jobs:
           Write-Host "Adding ASAN runtime folder to PATH: $asanPath"
           Write-Host "##vso[task.prependpath]$asanPath"
         displayName: "Add ASAN runtime DLLs to PATH"
-        condition: ${{ parameters.enableSanitizers }}
+        condition: ${{parameters.enableSanitizers}}
 
       - script: |
-          cd build${{ variables.solutionName }}\Apps\Playground
+          cd build${{variables.solutionName}}\Apps\Playground
           cd RelWithDebInfo
           Playground app:///Scripts/validation_native.js
-        displayName: 'Validation Tests'
+        displayName: "Validation Tests"
 
       - task: PublishBuildArtifacts@1
         inputs:
-          artifactName: '${{ variables.solutionName }} - ${{ parameters.graphics_api }} Rendered Pictures'
-          pathtoPublish: 'build${{ variables.solutionName }}/Apps/Playground/Results'
-        displayName: 'Publish Tests ${{ variables.solutionName }} Results'
+          artifactName: "${{variables.solutionName}} - ${{parameters.graphics_api}} Rendered Pictures"
+          pathtoPublish: "build${{variables.solutionName}}/Apps/Playground/Results"
+        displayName: "Publish Tests ${{variables.solutionName}} Results"
         condition: always()
 
       - task: PublishBuildArtifacts@1
         inputs:
-          artifactName: '${{ variables.solutionName }} - ${{ parameters.graphics_api }} Error Pictures'
-          pathtoPublish: 'build${{ variables.solutionName }}/Apps/Playground/Errors'
-        displayName: 'Publish Tests ${{ variables.solutionName }} Errors'
+          artifactName: "${{variables.solutionName}} - ${{parameters.graphics_api}} Error Pictures"
+          pathtoPublish: "build${{variables.solutionName}}/Apps/Playground/Errors"
+        displayName: "Publish Tests ${{variables.solutionName}} Errors"
         condition: failed()
-    
+
       - task: CopyFiles@2
         inputs:
-          sourceFolder: 'build${{ variables.solutionName }}/Apps/Playground/RelWithDebInfo'
+          sourceFolder: "build${{variables.solutionName}}/Apps/Playground/RelWithDebInfo"
           contents: Playground.*
-          targetFolder: '$(Build.ArtifactStagingDirectory)/Dumps'
+          targetFolder: "$(Build.ArtifactStagingDirectory)/Dumps"
           cleanTargetFolder: false
-        displayName: 'Stage test app exe/pdb for publishing'
+        displayName: "Stage test app exe/pdb for publishing"
         condition: failed()
 
       - script: |
-          cd build${{ variables.solutionName }}\Apps\UnitTests
+          cd build${{variables.solutionName}}\Apps\UnitTests
           cd RelWithDebInfo
           UnitTests
-        displayName: 'Unit Tests'
+        displayName: "Unit Tests"
 
       - task: CopyFiles@2
         inputs:
-          sourceFolder: 'build${{ variables.solutionName }}/Apps/UnitTests/RelWithDebInfo'
+          sourceFolder: "build${{variables.solutionName}}/Apps/UnitTests/RelWithDebInfo"
           contents: UnitTests.*
-          targetFolder: '$(Build.ArtifactStagingDirectory)/Dumps'
+          targetFolder: "$(Build.ArtifactStagingDirectory)/Dumps"
           cleanTargetFolder: false
-        displayName: 'Stage test app exe/pdb for publishing'
+        displayName: "Stage test app exe/pdb for publishing"
         condition: failed()
-    
+
       - task: PublishBuildArtifacts@1
         inputs:
-          artifactName: '${{ variables.solutionName }} - ${{ parameters.graphics_api }} Crash Dumps'
-          pathtoPublish: '$(Build.ArtifactStagingDirectory)/Dumps'
-        displayName: 'Publish Tests ${{ variables.solutionName }} Dumps'
+          artifactName: "${{variables.solutionName}} - ${{parameters.graphics_api}} Crash Dumps"
+          pathtoPublish: "$(Build.ArtifactStagingDirectory)/Dumps"
+        displayName: "Publish Tests ${{variables.solutionName}} Dumps"
         condition: failed()
